--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.34",
+    "@types/validator": "^13.11.9",
     "axios": "^1.6.7",
     "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
