--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
+    "react-spinners": "^0.13.8",
     "styled-components": "^6.1.8",
     "validator": "^13.11.0"
   },
