--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/styled-components": "^5.1.34",
     "@types/validator": "^13.11.9",
     "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
     "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,6 +21,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "react-spinners": "^0.13.8",
+    "stripe": "^14.19.0",
     "styled-components": "^6.1.8",
     "validator": "^13.11.0"
   },
